data/libdpxwrapper-0.1/libdpx.h

void		DPxSetMicSchedOnset(unsigned onset);					
unsigned	DPxGetMicSchedOnset(void);								
void		DPxSetMicSchedRate(unsigned rateValue, int rateUnits);	
unsigned	DPxGetMicSchedRate(int *rateUnits);						
void		DPxSetMicSchedCount(unsigned count);					
unsigned	DPxGetMicSchedCount(void);								
void		DPxEnableMicSchedCountdown(void);						
void		DPxDisableMicSchedCountdown(void);						
int			DPxIsMicSchedCountdown(void);							
void		DPxSetMicSched(unsigned onset, unsigned rateValue, int rateUnits, unsigned count);	
void		DPxStartMicSched(void);									
void		DPxStopMicSched(void);									
int			DPxIsMicSchedRunning(void);								
double		DPxGetMicGroupDelay(double sampleRate);					
void		DPxSetVidMode(int vidMode);								
int			DPxGetVidMode(void);									
void		DPxSetVidClut(UInt16* clutData);						
void		DPxSetVidCluts(UInt16* clutData);						
void		DPxEnableVidHorizSplit(void);							
void		DPxDisableVidHorizSplit(void);							
void		DPxAutoVidHorizSplit(void);								
int			DPxIsVidHorizSplit(void);								
void		DPxEnableVidVertStereo(void);							
void		DPxDisableVidVertStereo(void);							
void		DPxAutoVidVertStereo(void);								
int			DPxIsVidVertStereo(void);								
void		DPxEnableVidHorizOverlay(void);							
void		DPxDisableVidHorizOverlay(void);						
int			DPxIsVidHorizOverlay(void);								
void		DPxSetVidHorizOverlayBounds(int X1, int Y1, int X2, int Y2); 
void		DPxGetVidHorizOverlayBounds(int* X1, int* Y1, int* X2, int* Y2); 
void		DPxSetVidHorizOverlayAlpha(UInt16* alphaData);			
int			DPxGetVidHTotal(void);									
int			DPxGetVidVTotal(void);									
int			DPxGetVidHActive(void);									
int			DPxGetVidVActive(void);									
unsigned	DPxGetVidVPeriod(void);									
double		DPxGetVidVFreq(void);									
double		DPxGetVidHFreq(void);									
double		DPxGetVidDotFreq(void);									
int			DPxIsVidDviActive(void);								
int			DPxIsVidDviActiveDual(void);							
int         DPxIsVidDviLockable(void);                              
int			DPxIsVidOverClocked(void);								
void		DPxSetVidVesaLeft(void);								
void		DPxSetVidVesaRight(void);								
int			DPxIsVidVesaLeft(void);									
void		DPxEnableVidVesaBlueline(void);                         
void		DPxDisableVidVesaBlueline(void);						
int			DPxIsVidVesaBlueline(void);								
void        DPxSetVidVesaWaveform(int waveform);                    
int         DPxGetVidVesaWaveform(void);                            
void        DPxSetVidVesaPhase(int phase);                          
int         DPxGetVidVesaPhase(void);                               
void		DPxSetVidPsyncRasterLine(int line);						
int			DPxGetVidPsyncRasterLine(void);							
void		DPxEnableVidPsyncSingleLine(void);						
void		DPxDisableVidPsyncSingleLine(void);						
int			DPxIsVidPsyncSingleLine(void);							
void		DPxEnableVidPsyncBlankLine(void);						
void		DPxDisableVidPsyncBlankLine(void);						
int			DPxIsVidPsyncBlankLine(void);							
void        DPxSetVidSource(int vidSource);                         
int         DPxGetVidSource(void);                                  
void        DPxEnableVidScanningBacklight(void);                    
void        DPxDisableVidScanningBacklight(void);                   
int         DPxIsVidScanningBacklight(void);                        
void        DPxVideoScope(int toFile);                              
void		DPxSetError(int error);
void		DPxClearError(void);
int			DPxGetError(void);
void		DPxSetDebug(int level);
int			DPxGetDebug(void);
void		DPxSaveRegs(void);										
void		DPxRestoreRegs(void);									
void		DPxStopAllScheds(void);									
#define DPX_SUCCESS								0		
#define DPX_FAIL								-1		
#define DPX_ERR_USB_NO_DATAPIXX					-1000	
#define DPX_ERR_USB_RAW_EZUSB					-1001	
#define DPX_ERR_USB_RAW_FPGA					-1002	
#define DPX_ERR_USB_OPEN						-1003	
#define DPX_ERR_USB_OPEN_FPGA					-1004	
#define DPX_ERR_USB_SET_CONFIG					-1005	
#define DPX_ERR_USB_CLAIM_INTERFACE				-1006	
#define DPX_ERR_USB_ALT_INTERFACE				-1007	
#define DPX_ERR_USB_UNKNOWN_DPID				-1008	
#define DPX_ERR_USB_REG_BULK_WRITE				-1009	
#define DPX_ERR_USB_REG_BULK_READ				-1010	
#define DPX_ERR_SPI_START						-1100	
#define DPX_ERR_SPI_STOP						-1101	
#define DPX_ERR_SPI_READ						-1102	
#define DPX_ERR_SPI_WRITE						-1103	
#define DPX_ERR_SPI_ERASE						-1104	
#define DPX_ERR_SPI_WAIT_DONE					-1105	
#define DPX_ERR_SETREG16_ADDR_ODD				-1200	
#define DPX_ERR_SETREG16_ADDR_RANGE				-1201	
#define DPX_ERR_SETREG16_DATA_RANGE				-1202	
#define DPX_ERR_GETREG16_ADDR_ODD				-1203	
#define DPX_ERR_GETREG16_ADDR_RANGE				-1204	
#define DPX_ERR_SETREG32_ADDR_ALIGN				-1205	
#define DPX_ERR_SETREG32_ADDR_RANGE				-1206	
#define DPX_ERR_GETREG32_ADDR_ALIGN				-1207	
#define DPX_ERR_GETREG32_ADDR_RANGE				-1208	
#define DPX_ERR_NANO_TIME_NULL_PTR				-1300	
#define DPX_ERR_NANO_MARK_NULL_PTR				-1301	
#define DPX_ERR_UNKNOWN_PART_NUMBER				-1302	
#define DPX_ERR_RAM_UNKNOWN_SIZE				-1400	
#define DPX_ERR_RAM_WRITEREAD_FAIL				-1401	
#define DPX_ERR_RAM_WRITE_ADDR_ODD				-1402	
#define DPX_ERR_RAM_WRITE_LEN_ODD				-1403	
#define DPX_ERR_RAM_WRITE_TOO_HIGH				-1404	
#define DPX_ERR_RAM_WRITE_BUFFER_NULL			-1405	
#define DPX_ERR_RAM_WRITE_USB_ERROR				-1406	
#define DPX_ERR_RAM_READ_ADDR_ODD				-1407	
#define DPX_ERR_RAM_READ_LEN_ODD				-1408	
#define DPX_ERR_RAM_READ_TOO_HIGH				-1409	
#define DPX_ERR_RAM_READ_BUFFER_NULL			-1410	
#define DPX_ERR_RAM_READ_USB_ERROR				-1411	
#define DPX_ERR_DAC_SET_BAD_CHANNEL				-1500	
#define DPX_ERR_DAC_SET_BAD_VALUE				-1501	
#define DPX_ERR_DAC_GET_BAD_CHANNEL				-1502	
#define DPX_ERR_DAC_RANGE_NULL_PTR				-1503	
#define DPX_ERR_DAC_RANGE_BAD_CHANNEL			-1504	
#define DPX_ERR_DAC_BUFF_BAD_CHANNEL			-1505	
#define DPX_ERR_DAC_BUFF_ODD_BASEADDR			-1506	
#define DPX_ERR_DAC_BUFF_BASEADDR_TOO_HIGH		-1507	
#define DPX_ERR_DAC_BUFF_ODD_READADDR			-1508	
#define DPX_ERR_DAC_BUFF_READADDR_TOO_HIGH		-1509	
#define DPX_ERR_DAC_BUFF_ODD_WRITEADDR			-1510	
#define DPX_ERR_DAC_BUFF_WRITEADDR_TOO_HIGH		-1511	
#define DPX_ERR_DAC_BUFF_ODD_SIZE				-1512	
#define DPX_ERR_DAC_BUFF_TOO_BIG				-1513	
#define DPX_ERR_DAC_SCHED_TOO_FAST				-1514	
#define DPX_ERR_DAC_SCHED_BAD_RATE_UNITS		-1515	
#define DPX_ERR_ADC_GET_BAD_CHANNEL				-1600	
#define DPX_ERR_ADC_RANGE_NULL_PTR				-1601	
#define DPX_ERR_ADC_RANGE_BAD_CHANNEL			-1602	
#define DPX_ERR_ADC_REF_BAD_CHANNEL				-1603	
#define DPX_ERR_ADC_BAD_CHAN_REF				-1604	
#define DPX_ERR_ADC_BUFF_BAD_CHANNEL			-1605	
#define DPX_ERR_ADC_BUFF_ODD_BASEADDR			-1606	
#define DPX_ERR_ADC_BUFF_BASEADDR_TOO_HIGH		-1607	
#define DPX_ERR_ADC_BUFF_ODD_READADDR			-1608	