misc/libdpxwrapper-0.1/libdpxwrapper.py

DPxSetMicSchedOnset = lib_handle.DPxSetMicSchedOnset
DPxSetMicSchedOnset.restype = None
DPxSetMicSchedOnset.argtypes = [c_uint]
DPxGetMicSchedOnset = lib_handle.DPxGetMicSchedOnset
DPxGetMicSchedOnset.restype = c_uint
DPxGetMicSchedOnset.argtypes = []
DPxSetMicSchedRate = lib_handle.DPxSetMicSchedRate
DPxSetMicSchedRate.restype = None
DPxSetMicSchedRate.argtypes = [c_uint, c_int]
DPxGetMicSchedRate = lib_handle.DPxGetMicSchedRate
DPxGetMicSchedRate.restype = c_uint
DPxGetMicSchedRate.argtypes = [POINTER(c_int)]
DPxSetMicSchedCount = lib_handle.DPxSetMicSchedCount
DPxSetMicSchedCount.restype = None
DPxSetMicSchedCount.argtypes = [c_uint]
DPxGetMicSchedCount = lib_handle.DPxGetMicSchedCount
DPxGetMicSchedCount.restype = c_uint
DPxGetMicSchedCount.argtypes = []
DPxEnableMicSchedCountdown = lib_handle.DPxEnableMicSchedCountdown
DPxEnableMicSchedCountdown.restype = None
DPxEnableMicSchedCountdown.argtypes = []
DPxDisableMicSchedCountdown = lib_handle.DPxDisableMicSchedCountdown
DPxDisableMicSchedCountdown.restype = None
DPxDisableMicSchedCountdown.argtypes = []
DPxIsMicSchedCountdown = lib_handle.DPxIsMicSchedCountdown
DPxIsMicSchedCountdown.restype = c_int
DPxIsMicSchedCountdown.argtypes = []
DPxSetMicSched = lib_handle.DPxSetMicSched
DPxSetMicSched.restype = None
DPxSetMicSched.argtypes = [c_uint, c_uint, c_int, c_uint]
DPxStartMicSched = lib_handle.DPxStartMicSched
DPxStartMicSched.restype = None
DPxStartMicSched.argtypes = []
DPxStopMicSched = lib_handle.DPxStopMicSched
DPxStopMicSched.restype = None
DPxStopMicSched.argtypes = []
DPxIsMicSchedRunning = lib_handle.DPxIsMicSchedRunning
DPxIsMicSchedRunning.restype = c_int
DPxIsMicSchedRunning.argtypes = []
DPxGetMicGroupDelay = lib_handle.DPxGetMicGroupDelay
DPxGetMicGroupDelay.restype = c_double
DPxGetMicGroupDelay.argtypes = [c_double]
DPxSetVidMode = lib_handle.DPxSetVidMode
DPxSetVidMode.restype = None
DPxSetVidMode.argtypes = [c_int]
DPxGetVidMode = lib_handle.DPxGetVidMode
DPxGetVidMode.restype = c_int
DPxGetVidMode.argtypes = []
DPxSetVidClut = lib_handle.DPxSetVidClut
DPxSetVidClut.restype = None
DPxSetVidClut.argtypes = [POINTER(c_uint16)]
DPxSetVidCluts = lib_handle.DPxSetVidCluts
DPxSetVidCluts.restype = None
DPxSetVidCluts.argtypes = [POINTER(c_uint16)]
DPxEnableVidHorizSplit = lib_handle.DPxEnableVidHorizSplit
DPxEnableVidHorizSplit.restype = None
DPxEnableVidHorizSplit.argtypes = []
DPxDisableVidHorizSplit = lib_handle.DPxDisableVidHorizSplit
DPxDisableVidHorizSplit.restype = None
DPxDisableVidHorizSplit.argtypes = []
DPxAutoVidHorizSplit = lib_handle.DPxAutoVidHorizSplit
DPxAutoVidHorizSplit.restype = None
DPxAutoVidHorizSplit.argtypes = []
DPxIsVidHorizSplit = lib_handle.DPxIsVidHorizSplit
DPxIsVidHorizSplit.restype = c_int
DPxIsVidHorizSplit.argtypes = []
DPxEnableVidVertStereo = lib_handle.DPxEnableVidVertStereo
DPxEnableVidVertStereo.restype = None
DPxEnableVidVertStereo.argtypes = []
DPxDisableVidVertStereo = lib_handle.DPxDisableVidVertStereo
DPxDisableVidVertStereo.restype = None
DPxDisableVidVertStereo.argtypes = []
DPxAutoVidVertStereo = lib_handle.DPxAutoVidVertStereo
DPxAutoVidVertStereo.restype = None
DPxAutoVidVertStereo.argtypes = []
DPxIsVidVertStereo = lib_handle.DPxIsVidVertStereo
DPxIsVidVertStereo.restype = c_int
DPxIsVidVertStereo.argtypes = []
DPxEnableVidHorizOverlay = lib_handle.DPxEnableVidHorizOverlay
DPxEnableVidHorizOverlay.restype = None
DPxEnableVidHorizOverlay.argtypes = []
DPxDisableVidHorizOverlay = lib_handle.DPxDisableVidHorizOverlay
DPxDisableVidHorizOverlay.restype = None
DPxDisableVidHorizOverlay.argtypes = []
DPxIsVidHorizOverlay = lib_handle.DPxIsVidHorizOverlay
DPxIsVidHorizOverlay.restype = c_int
DPxIsVidHorizOverlay.argtypes = []
DPxSetVidHorizOverlayBounds = lib_handle.DPxSetVidHorizOverlayBounds
DPxSetVidHorizOverlayBounds.restype = None
DPxSetVidHorizOverlayBounds.argtypes = [c_int, c_int, c_int, c_int]
DPxGetVidHorizOverlayBounds = lib_handle.DPxGetVidHorizOverlayBounds
DPxGetVidHorizOverlayBounds.restype = None
DPxGetVidHorizOverlayBounds.argtypes = [
    POINTER(c_int),
    POINTER(c_int),
    POINTER(c_int),
    POINTER(c_int),
]
DPxSetVidHorizOverlayAlpha = lib_handle.DPxSetVidHorizOverlayAlpha
DPxSetVidHorizOverlayAlpha.restype = None
DPxSetVidHorizOverlayAlpha.argtypes = [POINTER(c_uint16)]
DPxGetVidHTotal = lib_handle.DPxGetVidHTotal
DPxGetVidHTotal.restype = c_int
DPxGetVidHTotal.argtypes = []
DPxGetVidVTotal = lib_handle.DPxGetVidVTotal
DPxGetVidVTotal.restype = c_int
DPxGetVidVTotal.argtypes = []
DPxGetVidHActive = lib_handle.DPxGetVidHActive
DPxGetVidHActive.restype = c_int
DPxGetVidHActive.argtypes = []
DPxGetVidVActive = lib_handle.DPxGetVidVActive
DPxGetVidVActive.restype = c_int
DPxGetVidVActive.argtypes = []
DPxGetVidVPeriod = lib_handle.DPxGetVidVPeriod
DPxGetVidVPeriod.restype = c_uint
DPxGetVidVPeriod.argtypes = []
DPxGetVidVFreq = lib_handle.DPxGetVidVFreq
DPxGetVidVFreq.restype = c_double
DPxGetVidVFreq.argtypes = []
DPxGetVidHFreq = lib_handle.DPxGetVidHFreq
DPxGetVidHFreq.restype = c_double
DPxGetVidHFreq.argtypes = []
DPxGetVidDotFreq = lib_handle.DPxGetVidDotFreq
DPxGetVidDotFreq.restype = c_double
DPxGetVidDotFreq.argtypes = []
DPxIsVidDviActive = lib_handle.DPxIsVidDviActive
DPxIsVidDviActive.restype = c_int
DPxIsVidDviActive.argtypes = []
DPxIsVidDviActiveDual = lib_handle.DPxIsVidDviActiveDual
DPxIsVidDviActiveDual.restype = c_int
DPxIsVidDviActiveDual.argtypes = []
DPxIsVidDviLockable = lib_handle.DPxIsVidDviLockable
DPxIsVidDviLockable.restype = c_int
DPxIsVidDviLockable.argtypes = []
DPxIsVidOverClocked = lib_handle.DPxIsVidOverClocked
DPxIsVidOverClocked.restype = c_int
DPxIsVidOverClocked.argtypes = []
DPxSetVidVesaLeft = lib_handle.DPxSetVidVesaLeft
DPxSetVidVesaLeft.restype = None
DPxSetVidVesaLeft.argtypes = []
DPxSetVidVesaRight = lib_handle.DPxSetVidVesaRight
DPxSetVidVesaRight.restype = None
DPxSetVidVesaRight.argtypes = []
DPxIsVidVesaLeft = lib_handle.DPxIsVidVesaLeft
DPxIsVidVesaLeft.restype = c_int
DPxIsVidVesaLeft.argtypes = []
DPxEnableVidVesaBlueline = lib_handle.DPxEnableVidVesaBlueline
DPxEnableVidVesaBlueline.restype = None
DPxEnableVidVesaBlueline.argtypes = []
DPxDisableVidVesaBlueline = lib_handle.DPxDisableVidVesaBlueline
DPxDisableVidVesaBlueline.restype = None
DPxDisableVidVesaBlueline.argtypes = []
DPxIsVidVesaBlueline = lib_handle.DPxIsVidVesaBlueline
DPxIsVidVesaBlueline.restype = c_int
DPxIsVidVesaBlueline.argtypes = []
DPxSetVidVesaWaveform = lib_handle.DPxSetVidVesaWaveform
DPxSetVidVesaWaveform.restype = None
DPxSetVidVesaWaveform.argtypes = [c_int]
DPxGetVidVesaWaveform = lib_handle.DPxGetVidVesaWaveform
DPxGetVidVesaWaveform.restype = c_int
DPxGetVidVesaWaveform.argtypes = []
DPxSetVidVesaPhase = lib_handle.DPxSetVidVesaPhase
DPxSetVidVesaPhase.restype = None
DPxSetVidVesaPhase.argtypes = [c_int]
DPxGetVidVesaPhase = lib_handle.DPxGetVidVesaPhase
DPxGetVidVesaPhase.restype = c_int
DPxGetVidVesaPhase.argtypes = []
DPxSetVidPsyncRasterLine = lib_handle.DPxSetVidPsyncRasterLine
DPxSetVidPsyncRasterLine.restype = None
DPxSetVidPsyncRasterLine.argtypes = [c_int]
DPxGetVidPsyncRasterLine = lib_handle.DPxGetVidPsyncRasterLine
DPxGetVidPsyncRasterLine.restype = c_int
DPxGetVidPsyncRasterLine.argtypes = []
DPxEnableVidPsyncSingleLine = lib_handle.DPxEnableVidPsyncSingleLine
DPxEnableVidPsyncSingleLine.restype = None
DPxEnableVidPsyncSingleLine.argtypes = []
DPxDisableVidPsyncSingleLine = lib_handle.DPxDisableVidPsyncSingleLine
DPxDisableVidPsyncSingleLine.restype = None
DPxDisableVidPsyncSingleLine.argtypes = []
DPxIsVidPsyncSingleLine = lib_handle.DPxIsVidPsyncSingleLine
DPxIsVidPsyncSingleLine.restype = c_int
DPxIsVidPsyncSingleLine.argtypes = []
DPxEnableVidPsyncBlankLine = lib_handle.DPxEnableVidPsyncBlankLine
DPxEnableVidPsyncBlankLine.restype = None
DPxEnableVidPsyncBlankLine.argtypes = []
DPxDisableVidPsyncBlankLine = lib_handle.DPxDisableVidPsyncBlankLine
DPxDisableVidPsyncBlankLine.restype = None
DPxDisableVidPsyncBlankLine.argtypes = []
DPxIsVidPsyncBlankLine = lib_handle.DPxIsVidPsyncBlankLine
DPxIsVidPsyncBlankLine.restype = c_int
DPxIsVidPsyncBlankLine.argtypes = []
DPxSetVidSource = lib_handle.DPxSetVidSource
DPxSetVidSource.restype = None
DPxSetVidSource.argtypes = [c_int]
DPxGetVidSource = lib_handle.DPxGetVidSource
DPxGetVidSource.restype = c_int
DPxGetVidSource.argtypes = []
DPxEnableVidScanningBacklight = lib_handle.DPxEnableVidScanningBacklight
DPxEnableVidScanningBacklight.restype = None
DPxEnableVidScanningBacklight.argtypes = []
DPxDisableVidScanningBacklight = lib_handle.DPxDisableVidScanningBacklight
DPxDisableVidScanningBacklight.restype = None
DPxDisableVidScanningBacklight.argtypes = []
DPxIsVidScanningBacklight = lib_handle.DPxIsVidScanningBacklight
DPxIsVidScanningBacklight.restype = c_int
DPxIsVidScanningBacklight.argtypes = []
DPxVideoScope = lib_handle.DPxVideoScope
DPxVideoScope.restype = None
DPxVideoScope.argtypes = [c_int]
DPxSetError = lib_handle.DPxSetError
DPxSetError.restype = None
DPxSetError.argtypes = [c_int]
DPxClearError = lib_handle.DPxClearError
DPxClearError.restype = None
DPxClearError.argtypes = []
DPxGetError = lib_handle.DPxGetError
DPxGetError.restype = c_int
DPxGetError.argtypes = []
DPxSetDebug = lib_handle.DPxSetDebug
DPxSetDebug.restype = None
DPxSetDebug.argtypes = [c_int]
DPxGetDebug = lib_handle.DPxGetDebug
DPxGetDebug.restype = c_int
DPxGetDebug.argtypes = []
DPxSaveRegs = lib_handle.DPxSaveRegs
DPxSaveRegs.restype = None
DPxSaveRegs.argtypes = []
DPxRestoreRegs = lib_handle.DPxRestoreRegs
DPxRestoreRegs.restype = None
DPxRestoreRegs.argtypes = []
DPxStopAllScheds = lib_handle.DPxStopAllScheds
DPxStopAllScheds.restype = None
DPxStopAllScheds.argtypes = []
DPX_SUCCESS = 0
DPX_FAIL = -1
DPX_ERR_USB_NO_DATAPIXX = -1000
DPX_ERR_USB_RAW_EZUSB = -1001
DPX_ERR_USB_RAW_FPGA = -1002
DPX_ERR_USB_OPEN = -1003
DPX_ERR_USB_OPEN_FPGA = -1004
DPX_ERR_USB_SET_CONFIG = -1005
DPX_ERR_USB_CLAIM_INTERFACE = -1006
DPX_ERR_USB_ALT_INTERFACE = -1007
DPX_ERR_USB_UNKNOWN_DPID = -1008
DPX_ERR_USB_REG_BULK_WRITE = -1009
DPX_ERR_USB_REG_BULK_READ = -1010
DPX_ERR_SPI_START = -1100
DPX_ERR_SPI_STOP = -1101
DPX_ERR_SPI_READ = -1102
DPX_ERR_SPI_WRITE = -1103
DPX_ERR_SPI_ERASE = -1104
DPX_ERR_SPI_WAIT_DONE = -1105
DPX_ERR_SETREG16_ADDR_ODD = -1200
DPX_ERR_SETREG16_ADDR_RANGE = -1201
DPX_ERR_SETREG16_DATA_RANGE = -1202
DPX_ERR_GETREG16_ADDR_ODD = -1203
DPX_ERR_GETREG16_ADDR_RANGE = -1204
DPX_ERR_SETREG32_ADDR_ALIGN = -1205
DPX_ERR_SETREG32_ADDR_RANGE = -1206
DPX_ERR_GETREG32_ADDR_ALIGN = -1207
DPX_ERR_GETREG32_ADDR_RANGE = -1208
DPX_ERR_NANO_TIME_NULL_PTR = -1300
DPX_ERR_NANO_MARK_NULL_PTR = -1301
DPX_ERR_UNKNOWN_PART_NUMBER = -1302
DPX_ERR_RAM_UNKNOWN_SIZE = -1400
DPX_ERR_RAM_WRITEREAD_FAIL = -1401
DPX_ERR_RAM_WRITE_ADDR_ODD = -1402
DPX_ERR_RAM_WRITE_LEN_ODD = -1403
DPX_ERR_RAM_WRITE_TOO_HIGH = -1404
DPX_ERR_RAM_WRITE_BUFFER_NULL = -1405
DPX_ERR_RAM_WRITE_USB_ERROR = -1406
DPX_ERR_RAM_READ_ADDR_ODD = -1407
DPX_ERR_RAM_READ_LEN_ODD = -1408
DPX_ERR_RAM_READ_TOO_HIGH = -1409
DPX_ERR_RAM_READ_BUFFER_NULL = -1410
DPX_ERR_RAM_READ_USB_ERROR = -1411
DPX_ERR_DAC_SET_BAD_CHANNEL = -1500
DPX_ERR_DAC_SET_BAD_VALUE = -1501
DPX_ERR_DAC_GET_BAD_CHANNEL = -1502
DPX_ERR_DAC_RANGE_NULL_PTR = -1503
DPX_ERR_DAC_RANGE_BAD_CHANNEL = -1504
DPX_ERR_DAC_BUFF_BAD_CHANNEL = -1505
DPX_ERR_DAC_BUFF_ODD_BASEADDR = -1506
DPX_ERR_DAC_BUFF_BASEADDR_TOO_HIGH = -1507
DPX_ERR_DAC_BUFF_ODD_READADDR = -1508
DPX_ERR_DAC_BUFF_READADDR_TOO_HIGH = -1509
DPX_ERR_DAC_BUFF_ODD_WRITEADDR = -1510
DPX_ERR_DAC_BUFF_WRITEADDR_TOO_HIGH = -1511
DPX_ERR_DAC_BUFF_ODD_SIZE = -1512
DPX_ERR_DAC_BUFF_TOO_BIG = -1513
DPX_ERR_DAC_SCHED_TOO_FAST = -1514
DPX_ERR_DAC_SCHED_BAD_RATE_UNITS = -1515
DPX_ERR_ADC_GET_BAD_CHANNEL = -1600
DPX_ERR_ADC_RANGE_NULL_PTR = -1601
DPX_ERR_ADC_RANGE_BAD_CHANNEL = -1602
DPX_ERR_ADC_REF_BAD_CHANNEL = -1603
DPX_ERR_ADC_BAD_CHAN_REF = -1604
DPX_ERR_ADC_BUFF_BAD_CHANNEL = -1605
DPX_ERR_ADC_BUFF_ODD_BASEADDR = -1606
DPX_ERR_ADC_BUFF_BASEADDR_TOO_HIGH = -1607
DPX_ERR_ADC_BUFF_ODD_READADDR = -1608
